@@ -89,7 +89,11 @@
   */           
 
 #if !defined  (HSE_VALUE) 
+#ifdef STM32F4_DISCOVERY
+  #define HSE_VALUE    ((uint32_t)8000000)  /*!< Value of the External oscillator in Hz */
+#else
   #define HSE_VALUE    ((uint32_t)25000000) /*!< Value of the External oscillator in Hz */
+#endif
 #endif /* HSE_VALUE */
 
 /**
