@@ -146,7 +146,7 @@
 
 /************************* PLL Parameters *************************************/
 /* PLL_VCO = (HSE_VALUE or HSI_VALUE / PLL_M) * PLL_N */
-#define PLL_M      25
+#define PLL_M      (HSE_VALUE/1000000)
 #define PLL_N      336
 
 /* SYSCLK = PLL_VCO / PLL_P */
